--- a/index.html
+++ b/index.html
@@ -9,7 +9,76 @@
 
 <body>
   <section>
+<body>
+  <table border="1">
+    <thead>
+      <tr>
+        <th colspan="4">Regional Sales Q1</th>
+      </tr>
+      <tr>
+        <th>Region</th>
+        <th>Sales Person</th>
+        <th>Amount</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>North-West</td>
+        <td>Tim</td>
+        <td>$3,000</td>
+        <td>$24,700</td>
+      </tr>
+      <tr>
+        <td>South-East</td>
+        <td>Ashley</td>
+        <td>$1,500</td>
+      </tr>
+      <tr>
+        <td>South-West</td>
+        <td>Jeff</td>
+        <td>$1,000</td>
+      </tr>
+      <tr>
+        <td>North-West</td>
+        <td>Sarah</td>
+        <td>$4,000</td>
+      </tr>
+      <tr>
+        <td>North-East</td>
+        <td>Alex</td>
+        <td>$2,000</td>
+      </tr>
+      <tr>
+        <td>North-East</td>
+        <td>Kevin</td>
+        <td>$5,000</td>
+      </tr>
+      <tr>
+        <td>South-East</td>
+        <td>Patricia</td>
+        <td>$6,300</td>
+      </tr>
+      <tr>
+        <td>South-West</td>
+        <td>Arnold</td>
+        <td>$200</td>
+      </tr>
+      <tr>
+        <td>North-West</td>
+        <td>Lindsay</td>
+        <td>$800</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="4">Q1 Employee Sales By Region</td>
+      </tr>
+    </tfoot>
+  </table>
+</body>
 
+</html>
   </section>
 
   <h1>Gayatri Sundaresan BIO</h1>
@@ -19,16 +88,98 @@
 
 </a>
 
-<p> Gayatri is a human on this big planet 
-
-
-
+<p> Gayatri is a human on this big planet. Gayatri lives in Arlington, VA in a apartment with lots of people. 
+  Gayatri is learning a Data class which is very new to her
 
 </p>
 
+<ul>
+  <a href="https://www.bbc.com">
+  
+  <a href="www.vogue.com">
 
+  <a href="wwww.washingtonpost.com"
 
+  <a href="www.facebook.com"
+
+  </a>
+  </a>
+  </a> 
+  </a>
+</ul>
 
 </body>
+
+<body>
+    <table border="1">
+      <thead>
+        <tr>
+          <th colspan="4">Regional Sales Q1</th>
+        </tr>
+        <tr>
+          <th>Region</th>
+          <th>Sales Person</th>
+          <th>Amount</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>North-West</td>
+          <td>Tim</td>
+          <td>$3,000</td>
+          <td>$24,700</td>
+        </tr>
+        <tr>
+          <td>South-East</td>
+          <td>Ashley</td>
+          <td>$1,500</td>
+        </tr>
+        <tr>
+          <td>South-West</td>
+          <td>Jeff</td>
+          <td>$1,000</td>
+        </tr>
+        <tr>
+          <td>North-West</td>
+          <td>Sarah</td>
+          <td>$4,000</td>
+        </tr>
+        <tr>
+          <td>North-East</td>
+          <td>Alex</td>
+          <td>$2,000</td>
+        </tr>
+        <tr>
+          <td>North-East</td>
+          <td>Kevin</td>
+          <td>$5,000</td>
+        </tr>
+        <tr>
+          <td>South-East</td>
+          <td>Patricia</td>
+          <td>$6,300</td>
+        </tr>
+        <tr>
+          <td>South-West</td>
+          <td>Arnold</td>
+          <td>$200</td>
+        </tr>
+        <tr>
+          <td>North-West</td>
+          <td>Lindsay</td>
+          <td>$800</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="4">Q1 Employee Sales By Region</td>
+        </tr>
+      </tfoot>
+    </table>
+  </body>
+  
+  </html>
+
 
 </html>
